[tool.poetry]
name = "py-code-quality"
version = "0.1.0"
description = ""
authors = ["Ramananda Kairi <ramananda.kairi@gmail.ccom>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
safety = "^1.10.3"
bandit = "^1.7.4"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
